origami-engine/tests/trybuild/fail/should_fail_when_html_escape_is_enabled_and_noescape_is_used_in_style_tag.rs
use origami_engine::comp;
fn main() {
    comp! {
        foo =>
        style noescape {

        }
    }
    foo!();
}
